--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- html-docx-js for Word export -->
     <script src="https://cdn.jsdelivr.net/npm/html-docx-js@0.3.1/dist/html-docx.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+    <!-- html2pdf.js for PDF export -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </head>
 <body>
 
@@ -52,7 +54,7 @@
 
             <div class="form-group">
                 <label>Presidente</label>
-                <input type="text" id="chairman" value="[Nombre]">
+                <input type="text" id="chairman" placeholder="[Nombre]">
             </div>
             <div class="form-group">
                 <label>Consejero Sala Auxiliar</label>
@@ -65,14 +67,14 @@
                 <div class="form-group">
                     <label>Canción Inicial</label>
                     <div style="display: flex; gap: 5px;">
-                        <input type="text" id="openingSong" value="[Número]" placeholder="Num">
+                        <input type="text" id="openingSong" placeholder="[Número]">
                         <input type="time" id="openingSongTime" value="00:00" style="width: 90px;">
                     </div>
                 </div>
                 <div class="form-group">
                     <label>Oración de inicio</label>
                     <div style="display: flex; gap: 5px;">
-                        <input type="text" id="openingPrayer" value="[Nombre]" placeholder="Nombre">
+                        <input type="text" id="openingPrayer" placeholder="[Nombre]">
                         <input type="time" id="openingPrayerTime" value="00:00" style="width: 90px;">
                     </div>
                 </div>
@@ -82,20 +84,20 @@
             <fieldset>
                 <legend>Tesoros de la Biblia</legend>
                 <div class="item-row">
-                    <input type="text" id="treasuresTalkTitle" placeholder="Título Discurso" value="[Título]">
+                    <input type="text" id="treasuresTalkTitle" placeholder="[Título]">
                     <input type="time" id="treasuresTalkTime" value="00:00" style="width: 90px;">
                 </div>
                 <div class="item-row">
-                    <input type="text" id="treasuresTalkSpeaker" placeholder="Orador" value="[Nombre]">
+                    <input type="text" id="treasuresTalkSpeaker" placeholder="[Nombre]">
                 </div>
                 <div class="item-row">
                     <label>Perlas Escondidas</label>
-                    <input type="text" id="gemsSpeaker" placeholder="Orador" value="[Nombre]">
+                    <input type="text" id="gemsSpeaker" placeholder="[Nombre]">
                     <input type="time" id="gemsTime" value="00:00" style="width: 90px;">
                 </div>
                 <div class="item-row">
                     <label>Lectura de la Biblia</label>
-                    <input type="text" id="bibleReadingStudent" placeholder="Estudiante" value="[Nombre]">
+                    <input type="text" id="bibleReadingStudent" placeholder="[Nombre]">
                     <input type="time" id="bibleReadingTime" value="00:00" style="width: 90px;">
                 </div>
             </fieldset>
@@ -115,7 +117,7 @@
                 <div class="form-group">
                     <label>Canción Intermedia</label>
                     <div style="display: flex; gap: 5px;">
-                        <input type="text" id="middleSong" value="[Número]">
+                        <input type="text" id="middleSong" placeholder="[Número]">
                         <input type="text" id="middleSongTime" value="0:00" placeholder="Tiempo" style="width: 60px;">
                     </div>
                 </div>
@@ -127,26 +129,26 @@
                 <div class="form-group" style="margin-top: 1rem;">
                     <label>Estudio Bíblico</label>
                     <div style="display: flex; gap: 5px; margin-bottom: 5px;">
-                        <input type="text" id="congregationStudyConductor" placeholder="Conductor" value="[Nombre]">
+                        <input type="text" id="congregationStudyConductor" placeholder="[Nombre]" >
                         <input type="text" id="congregationStudyTime" value="0:00" placeholder="Tiempo" style="width: 60px;">
                     </div>
-                    <input type="text" id="congregationStudyReader" placeholder="Lector" value="[Nombre]">
+                    <input type="text" id="congregationStudyReader" placeholder="[Nombre]">
                 </div>
                 <div class="form-group">
                     <label>Canción Final</label>
                     <div style="display: flex; gap: 5px;">
-                        <input type="text" id="closingSong" value="[Número]">
+                        <input type="text" id="closingSong" placeholder="[Número]">
                         <input type="text" id="closingSongTime" value="0:00" placeholder="Tiempo" style="width: 60px;">
                     </div>
                 </div>
                 <div class="form-group">
                     <label>Oración Final</label>
-                    <input type="text" id="closingPrayer" value="[Nombre]">
+                    <input type="text" id="closingPrayer" placeholder="[Nombre]">
                 </div>
             </fieldset>
 
             <div class="actions">
-                <button onclick="window.print()" class="btn-primary">Imprimir / PDF</button>
+                <button onclick="generatePDF()" class="btn-primary">Descargar PDF</button>
                 <button onclick="exportToWord()" class="btn-secondary">Exportar a Word</button>
             </div>
         </aside>
