--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                     </div>
                     <input type="text" id="congregationStudyReader" placeholder="[Nombre]">
                 </div>
+            <div class="form-group">
+                    <label>Palabras de conclusión</label>
+                    <input type="text" id="closingCommentsTime" value="0:00" placeholder="Tiempo" style="width: 60px;">
+                </div>
                 <div class="form-group">
                     <label>Canción Final</label>
                     <div style="display: flex; gap: 5px;">
