fix margenes / 3 secciones

--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
                         <input type="radio" name="programSelector" value="program2" onchange="switchProgram('program2')"> Programa 2 (Pág 1 Abajo)
                     </label>
                     <label style="font-weight: normal; cursor: pointer;">
-                        <input type="radio" name="programSelector" value="program3" onchange="switchProgram('program3')"> Programa 3 (Pág 2 Arriba)
-                    </label>
-                    <label style="font-weight: normal; cursor: pointer;">
-                        <input type="radio" name="programSelector" value="program4" onchange="switchProgram('program4')"> Programa 4 (Pág 2 Abajo)
+                        <input type="radio" name="programSelector" value="program3" onchange="switchProgram('program3')"> Programa 3 (Abajo)
                     </label>
                 </div>
             </div>
@@ -172,8 +169,6 @@
                 <div class="program-card" id="programCopy2"></div>
                 <div class="cut-line"></div>
                 <div class="program-card" id="programCopy3"></div>
-                <div class="cut-line"></div>
-                <div class="program-card" id="programCopy4"></div>
             </div>
         </main>
     </div>
