fix espacioes estudiante/ayudante

--- a/index.html
+++ b/index.html
@@ -86,23 +86,26 @@
             <!-- TREASURES -->
             <fieldset>
                 <legend>Tesoros de la Biblia</legend>
-                <div class="item-row">
-                    <input type="text" id="treasuresTalkTitle" placeholder="[Título]">
-                    <input type="time" id="treasuresTalkTime" value="00:00" style="width: 90px;">
-                </div>
-                <div class="item-row">
-                    <input type="text" id="treasuresTalkSpeaker" placeholder="[Nombre]">
-                </div>
-                <div class="item-row">
-                    <label>Perlas Escondidas</label>
-                    <input type="text" id="gemsSpeaker" placeholder="[Nombre]">
-                    <input type="time" id="gemsTime" value="00:00" style="width: 90px;">
-                </div>
-                <div class="item-row">
-                    <label>Lectura de la Biblia</label>
-                    <input type="text" id="bibleReadingStudent" placeholder="[Nombre]">
-                    <input type="time" id="bibleReadingTime" value="00:00" style="width: 90px;">
-                </div>
+                    <div class="father">
+                        <div class="item-row ">
+                            <input type="text" id="treasuresTalkTitle" placeholder="[Título]">
+                            <input type="time" id="treasuresTalkTime" value="00:00" style="width: 90px;">
+                        </div>
+                        <div class="item-row">
+                            <input type="text" id="treasuresTalkSpeaker" placeholder="[Nombre]">
+                        </div>
+                    </div>                
+                    <div class="item-row">
+                        <label>Perlas Escondidas</label>
+                        <input type="text" id="gemsSpeaker" placeholder="[Nombre]">
+                        <input type="time" id="gemsTime" value="00:00" style="width: 90px;">
+                    </div>
+                    <div class="item-row">
+                        <label>Lectura de la Biblia</label>
+                        <input type="text" id="bibleReadingStudent" placeholder="[Nombre]">
+                        <input type="time" id="bibleReadingTime" value="00:00" style="width: 90px;">
+                    </div>
+                
             </fieldset>
 
             <!-- LIVING AS CHRISTIANS (Dynamic) -->
