segunda sala fase 2

--- a/index.html
+++ b/index.html
@@ -165,8 +165,10 @@
 
             <div class="actions">
                 <button onclick="generatePDF()" class="btn-primary">Descargar PDF</button>
+        <!-- Word button
                 <button onclick="exportToWord()" class="btn-secondary">Exportar a Word</button>
             </div>
+        -->
         </aside>
 
         <!-- PREVIEW PANEL -->
